--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -3,10 +3,26 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.mycompany.app</groupId>
   <artifactId>maven</artifactId>
-  <packaging>jar</packaging>
+  <packaging>apk</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>maven</name>
   <url>http://maven.apache.org</url>
+  <profiles>
+        <profile>
+            <id>local</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+				<projectVersion>1.0.0-SNAPSHOT</projectVersion>
+                <packagingType>apk</packagingType>
+				<android.maven.version>3.8.2</android.maven.version>
+            </properties>
+			
+        </profile>
+        
+</profiles> 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
