--- a/maven/pom.xml
+++ b/maven/pom.xml
@@ -21,6 +21,20 @@
             </properties>
 			
         </profile>
+<build>
+  
+	<plugins>
+		
+		
+		<plugin>
+			<groupId>com.jayway.maven.plugins.android.generation2</groupId>
+			<artifactId>android-maven-plugin</artifactId>
+			 <version>3.8.2</version>
+			
+			<extensions>true</extensions>
+		</plugin>
+	</plugins>
+</build>
         
 </profiles> 
   <dependencies>
